chatbot complete edition

--- a/frontend/views/create-group.html
+++ b/frontend/views/create-group.html
@@ -18,11 +18,11 @@
             <h3 class="mb-3 title">MyChat - Create Group</h3>        
             <div class="mb-3">
                 <label class="text-white mb-2" for="group-name">Group Name</label>
-              <input required class="form-control" type="text" placeholder="Name" id="group-name" name="group_name">
+              <input required class="form-control" type="text" placeholder="Name" id="group-name" name="groupName">
             </div>
             <div class="mb-3">
                 <label class="text-white mb-2" for="group-description">Group Description</label>
-              <input required class="form-control" type="text" placeholder="Description" id="group-description" name="group_description">
+              <input required class="form-control" type="text" placeholder="Description" id="group-description" name="groupDescription">
             </div>
             
             <button class="btn btn-success w-100">Create</button>       
@@ -35,7 +35,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.min.js"
         integrity="sha512-PJa3oQSLWRB7wHZ7GQ/g+qyv6r4mbuhmiDb8BjSFZ8NZ2a42oTtAq5n0ucWAwcQDlikAtkub+tPVCw4np27WCg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="/js/main.js"></script>
     <script src="/js/chat.js"></script>
 </body>
 
