--- a/frontend/views/registration.html
+++ b/frontend/views/registration.html
@@ -15,10 +15,10 @@
       <form id="registration-form" class="signup-form p-5 border border-1 border-danger">
         <h3 class="mb-3 title">MyChat - Register</h3>        
         <div class="mb-3">
-          <input required class="form-control" type="text" placeholder="First Name" id="first_name" name="first_name">
+          <input required class="form-control" type="text" placeholder="First Name" id="first_name" name="firstName">
         </div>
         <div class="mb-3">
-          <input required class="form-control" type="text" placeholder="Last Name" id="last_name" name="last_name">
+          <input required class="form-control" type="text" placeholder="Last Name" id="last_name" name="lastName">
         </div>
         <div class="mb-3">
           <input required class="form-control" type="email" placeholder="example@email.com" id="email" name="email">
@@ -30,7 +30,7 @@
           <input required class="form-control" type="password" placeholder="Password" id="password" name="password">
         </div>
         <div class="mb-3">
-          <input required class="form-control" type="password" placeholder="Confirm Password" id="confirm_password"
+          <input required class="form-control" type="password" placeholder="Confirm Password" id="confirmPassword"
             name="confirm_password">
         </div>
         <div>
